<resources>
    <string name="app_name">AppFondosFinancieros</string>

    <string name="msgBtnIniciarParticipante">Iniciar como Participante del fondo</string>
    <string name="msgtxtVwBienvenido">¡Welcome!</string>
    <string name="msgBtnIniciarCajero">Go</string>
    <string name="msgTxtVwIniciarSesion">Sign In</string>
    <string name="msgImgVwDescription">logo del fondo</string>
    <string name="msgBtnLogin">LogIn</string>
    <string name="msgEdtxEmail">Email or NickName</string>
    <string name="mgsEdtxPassword">Password</string>
    <string name="msgBtnBack">BACK</string>
    <string name="msgTxtVwEmail">Email or NickName:</string>
    <string name="msgTxtVwPassword">Password:</string>
    <string name="msgImgVwDescriptionLogoLogin">loginLogo</string>
    <string name="msgImgVwLogoInputData">logoInputDataLogin</string>
    <string name="title_activity_input_code">InputCode</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_incode">Input Invitation Code</string>
    <string name="text_code">0</string>
    <string name="msgBalance">$ 165.543.00</string>
    <string name="msgWelcome">EasyFund wishes you a Happy Christmas!.</string>
    <string name="msgWelcomeMessage">Welcome</string>
    <string name="msgBtnContinuar">Continue</string>
    <string name="txtImgDescription">image welcome</string>
    <string name="msgTitleReglasCajero">Rules List</string>
    <string name="msgTitleNombreFondoAhorro">Fund Name:</string>
    <string name="msgMainLogo">Save for your Goals.</string>
    <string name="configuration">Configuration</string>
    <string name="portugues">Portugues</string>
    <string name="back">Back</string>
    <string name="frances">Frances</string>
    <string name="english">English</string>
    <string name="espa_ol">Español</string>
    <string name="aleman">Aleman</string>
    <string name="mandarin">Mandarin</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="fee_payment">Fee Payment</string>
    <string name="amount">Amount:</string>
    <string name="date">Date:</string>
    <string name="fund">Fund:</string>
    <string name="participant_name">Participant Name</string>
    <string name="_2022_12_11">2022/12/11</string>
    <string name="fondo_los_rodriguez">Fondo los Rodriguez</string>
    <string name="_250_000_00">$250.000.00</string>
    <string name="pay">Pay</string>
    <string name="validate">Validate</string>
    <string name="loan_request">Loan Request</string>
    <string name="_2000_09_09">2000/09/09</string>
    <string name="amountLoanR">Amount:</string>
    <string name="_0">$0</string>
    <string name="_34">34</string>
    <string name="init_date">Init Date:</string>
    <string name="end_date">End Date:</string>
    <string name="amount_fees">Amount Fees:</string>
    <string name="apply_for">Apply for</string>
    <string name="participant">Participant</string>
    <string name="fund_balance">Fund balance</string>
    <string name="admin_name">Admin Name</string>
    <string name="loans">Loans</string>
    <string name="tracing">Tracing</string>
    <string name="terms_conditions_and_rules">Terms, conditions and Rules</string>
    <string name="hello">Hello</string>
    <string name="partitomenu">partiTomenu</string>
    <string name="prestamotomenu">prestamoToMenu</string>
    <string name="reglastohome">reglasToHome</string>
    <string name="historicotomenu">historicoToMenu</string>
    <string name="logouser">logoUser</string>
    <string name="participants">Participants</string>
    <string name="participants_list">Participants List</string>
    <string name="id_card">ID Card</string>
    <string name="write_lastname">Write lastname</string>
    <string name="lastname">LastName:</string>
    <string name="write_name">Write name</string>
    <string name="name">Name:</string>
    <string name="write_id_card">Write ID Card</string>
    <string name="phonenumber">PhoneNumber:</string>
    <string name="write_phonenumber">Write phonenumber</string>
    <string name="address">Address:</string>
    <string name="write_address">Write Address</string>
    <string name="pay_fee">Pay Fee</string>
    <string name="amount_fee">Amount Fee:</string>
    <string name="_245_000_00">$ 245.000.00</string>
    <string name="_24_08_2023">24/08/2023</string>
    <string name="_165_543_00">$ 165.543.00</string>
    <string name="amount_dues">amount dues</string>
    <string name="dues_amount">Dues amount</string>
    <string name="loan_amount">loan amount</string>
    <string name="loan_list">Loan List</string>
    <string name="participant_document">Participant Document</string>
    <string name="ok">OK</string>
    <string name="fund_name">Fund name</string>
    <string name="max_amount_fees">Max Amount Fees:</string>
    <string name="_2">2%</string>
    <string name="percentage_interest">Percentage Interest:</string>
    <string name="max_amount_loan">Max Amount Loan:</string>
    <string name="_24">24</string>
    <string name="fund_basis">Fund Basis:</string>
    <string name="suscription_code">Suscription Code:</string>
    <string name="fxsdf1l">FXSDF1L</string>
    <string name="save_rules">Save Rules</string>
    <string name="imagen_compartir_c_digo_del_fondo">imagen compartir código del fondo</string>
    <string name="contribution_history">Contribution History</string>
    <string name="loan_history">Loan History</string>
</resources>