<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReglasCajero">

    <TextView
        android:id="@+id/txtListaReglas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="151dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/msgTitleReglasCajero"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="343dp"
        android:layout_height="468dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="37dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtListaReglas">

        <TextView
            android:id="@+id/txtNombreFondo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:text="@string/msgTitleNombreFondoAhorro"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etxtBaseAhorro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/autour_one"
            android:hint="@string/fund_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtBaseAhorro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:text="@string/fund_basis"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/autour_one"
            android:hint="@string/_0"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/txtMontoPrestamo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:text="@string/max_amount_loan"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/eTxtMontoPrestamo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/autour_one"
            android:hint="@string/_0"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/txtTasaInteres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:text="@string/percentage_interest"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etxtTasaInteres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/autour_one"
            android:hint="@string/_2"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/txtMaximoCntCuotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:text="@string/max_amount_fees"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etxtMaximoCntCuotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/autour_one"
            android:hint="@string/_24"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/txtEtiquetaCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/autour_one"
            android:text="@string/suscription_code"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCodigoSuscripcion"
                android:layout_width="257dp"
                android:layout_height="43dp"
                android:background="#A36DAC"
                android:fontFamily="@font/autour_one"
                android:gravity="center"
                android:text="@string/fxsdf1l"
                android:textAlignment="center"
                android:textColor="#F3E5F5"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/imagen_compartir_c_digo_del_fondo"
                app:srcCompat="@drawable/ic_share" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnBackReglasHome"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#0B5C64"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardarReglas"
        app:layout_constraintVertical_bias="0.942" />

    <Button
        android:id="@+id/btnGuardarReglas"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="#A36DAC"
        android:fontFamily="@font/autour_one"
        android:text="@string/save_rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>